[package]
name = "rt"
version = "0.0.1"
authors = ["Michael Leandersson <tripokey@gmail.com>"]

description = "rt aims to be a UI toolkit for rust"
homepage = "https://github.com/tripokey/rt"
repository = "https://github.com/tripokey/rt"
documentation = "https://github.com/tripokey/rt"
license = "MIT"

[dependencies]
